--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
         run: mix format --check-formatted
 
       - name: Check unused deps
-        run: mix deps.unlock --check-unused
+        run: mix deps.unlock --check-unused --unused-ignore
 
       - name: Credo
         run: mix credo
