--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -157,5 +157,5 @@ jobs:
             docker-compose up -d sonnet
             
             echo "清理未使用的 sonnet 相关镜像..."
-            docker images | grep sonnet | awk '{print $3}' | xargs -r docker rmi
+            docker images "ghcr.io/mithenji/sonnet" --format "{{.ID}}" | grep -v $(docker inspect --format='{{.Image}}' sonnet) | xargs -r docker rmi
           EOF
