--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,8 @@ npm-debug.log
 .sonnet_env
 
 # Docker
-./docker-compose.yml
+docker-compose.yml
+docker-compose.yml.yaml
 
 # NGINX
 sonnet.mithenji.me.conf
