--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,20 @@ jobs:
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
+
+      - name: Install and build frontend assets
+        working-directory: ./assets
+        run: |
+          npm ci
+          npm run build
+          npm run build:demos
+
       - uses: erlef/setup-beam@5304e04ea2b355f03681464e683d92e3b2f18451 # v1
         id: beam
         with:
