--- a/assets/package.json
+++ b/assets/package.json
@@ -3,6 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "staticDirs": {
+    "assets": [
+      "static"
+    ]
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -17,6 +22,7 @@
     "pixi.js": "^8.6.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "swiper": "^11.1.15",
     "vue": "^3.4.15"
   },
   "devDependencies": {
