--- a/assets/webpack/.gitignore
+++ b/assets/webpack/.gitignore
@@ -27,6 +27,7 @@ scorpius_sonnet-*.tar
 
 # Ignore assets that are produced by build tools.
 /priv/static/
+/assets/dist/
 
 # Ignore digested assets cache.
 /priv/static/cache_manifest.json
