--- a/assets/webpack/package.json
+++ b/assets/webpack/package.json
@@ -17,9 +17,11 @@
     "@rive-app/canvas": "^1.2.1",
     "@rive-app/canvas-advanced": "^1.2.1",
     "@rive-app/webgl": "^1.2.1",
+    "@tailwindcss/postcss": "^4.0.12",
     "@tweenjs/tween.js": "^21.0.0",
     "animejs": "^3.2.1",
     "async-validator": "^4.2.5",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "eruda": "^3.0.1",
@@ -53,7 +55,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-runtime": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
-    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-react": "^7.26.3",
     "@babel/runtime": "^7.22.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@svgr/webpack": "^8.0.1",
@@ -67,6 +69,7 @@
     "core-js": "^3.31.1",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
+    "cssnano": "^6.0.1",
     "dotenv-expand": "^12.0.1",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^4.0.1",
@@ -77,8 +80,9 @@
     "less": "^4.1.3",
     "less-loader": "^11.1.3",
     "mini-css-extract-plugin": "^2.7.6",
-    "postcss": "^8.4.26",
+    "postcss": "^8.5.3",
     "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^15.1.0",
     "postcss-loader": "^7.3.3",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^9.0.0",
@@ -93,6 +97,7 @@
     "sass-loader": "^13.3.2",
     "source-map-loader": "^4.0.1",
     "style-loader": "^3.3.3",
+    "tailwindcss": "^4.0.12",
     "terser-webpack-plugin": "^5.3.9",
     "vue-loader": "^17.2.2",
     "webpack": "^5.88.2",
