style: format Elixir code files
- Run mix format to ensure consistent code style
- Fix formatting issues across the codebase
- Pass mix format --check-formatted in CI

This change ensures all Elixir files follow the standard formatting
conventions, improving code readability and maintainability.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: '**/package-lock.json'
+          cache-dependency-path: 'assets/package-lock.json'
 
       - name: Install and build frontend assets
         working-directory: ./assets
