ci: improve npm dependencies caching strategy
- Replace setup-node's built-in cache with explicit cache action
- Cache both npm cache directory and node_modules
- Add fallback cache restoration
- Use package-lock.json hash for cache key generation

This change provides more reliable and efficient caching for npm
dependencies in the CI pipeline.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,17 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: 'assets/package-lock.json'
+
+      - name: Cache npm dependencies
+        uses: actions/cache@v4
+        id: npm-cache
+        with:
+          path: |
+            ~/.npm
+            assets/node_modules
+          key: ${{ runner.os }}-npm-${{ hashFiles('assets/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-
 
       - name: Install and build frontend assets
         working-directory: ./assets
